# mintymacks_tui

./: Cargo.toml  eco.pgn  rustfmt.toml  stockfish-17-skill-0.toml  stockfish-17-skill-20.toml  stockfish-17.toml  stockfish.toml  suckfish.toml
src/: analyze.rs  engine.rs  faceoff.rs  main.rs  move_select.rs  new_profile.rs  openings.rs  player.rs  profile.rs  settings.rs  user_input.rs  widgets.rs
src/program/: enigne_player.rs  game.rs  human_player.rs  mod.rs
src/widgets/: board.rs  mod.rs  move_select.rs
